--- a/bower.json
+++ b/bower.json
@@ -3,10 +3,19 @@
   "version": "0.0.0",
   "dependencies": {
     "core-elements": "Polymer/core-elements#^0.4.0",
+    "x-tag-imports": "robdodson/x-tag-imports#~0.1.4",
     "paper-elements": "Polymer/paper-elements#^0.4.0",
+    "google-map": "PolymerLabs/google-map#~0.2.3",
+    "polymer-ui-card": "PolymerLabs/polymer-ui-card#~0.2.3",
+    "gplus-button": "robdodson/gplus-button#master",
+    "google-map-streetview-panorama": "robdodson/google-map-streetview-panorama#~0.0.1",
     "polymer": "Polymer/polymer#^0.4.0"
   },
   "devDependencies": {
     "polymer-test-tools": "Polymer/polymer-test-tools#^0.4.0"
+  },
+  "resolutions": {
+    "platform": "^0.4.0",
+    "core-component-page": "^0.4.0"
   }
 }
